officially compiles in the main baby

--- a/protocols/CMakeLists.txt
+++ b/protocols/CMakeLists.txt
@@ -9,5 +9,23 @@ project(Distributed_Simulator
 include_directories(include)
 
 add_subdirectory(src)
+# add_subdirectory(tests)
+
 add_executable(main main.cpp)
 target_link_libraries(main PUBLIC graph)
+
+
+# include(FetchContent)
+# FetchContent_Declare(Catch2
+#     GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+#     GIT_TAG        v3.4.0
+# )
+# FetchContent_MakeAvailable(Catch2)
+#
+# target_link_libraries(graph_test PUBLIC graph)
+# target_link_libraries(stp_test PUBLIC graph)
+#
+# enable_testing()
+#
+# add_test(NAME graph_tests COMMAND graph_test)
+# add_test(NAME graph_tests COMMAND stp_test)
