--- a/protocols/src/stp/CMakeLists.txt
+++ b/protocols/src/stp/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(stp STATIC stp.cpp)
-target_include_directories(stp PUBLIC ${PROJECT_SOURCE_DIR/include})
+# target_include_directories(stp PUBLIC ${PROJECT_SOURCE_DIR/include})
